# permissive-spellchecker-nodepends

./: .gitignore  CMakeLists.txt  permissive-spellchecker_global.h  permissivespellchecker.cpp  permissivespellchecker.h
